# eks-sidecarless-service-networking

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
apps/: AGENTS.md
apps/checkout/: .env.example  Dockerfile  go.mod  go.sum
apps/checkout/tests/: api_test.go
apps/delivery/: .env.example  Dockerfile  package.json
apps/delivery/src/: app.js  config.js  server.js
apps/delivery/tests/: app.test.js
apps/inventory/: .env.example  Dockerfile  go.mod  go.sum
apps/inventory/tests/: api_test.go
apps/payment/: .env.example  Dockerfile  main.py  pyproject.toml
apps/payment/src/: app_factory.py  config.py  health.py  logging_middleware.py  models.py  routes.py  service.py
apps/payment/tests/: test_api.py
docs/: aws-infrastructure.drawio  kubernetes-runtime.drawio
kubernetes/: AGENTS.md
kubernetes/base/aws-lb-controller/: kustomization.yaml  values.yaml
kubernetes/base/cert-manager/: kustomization.yaml  values.yaml
kubernetes/base/cilium/: kustomization.yaml  values.yaml
kubernetes/base/gateway-api-controller/: kustomization.yaml  values.yaml
kubernetes/overlays/bar/: gateway.yaml  gatewayclass.yaml  httproutes.yaml  kustomization.yaml  values-cilium.yaml  values-gateway-api.yaml
kubernetes/overlays/foo/: gateway.yaml  httproutes.yaml  ingress.yaml  kustomization.yaml  values-cert-manager.yaml  values-cilium.yaml  values-gateway-api.yaml  values-lb-controller.yaml
terraform/: AGENTS.md
terraform/envs/demo/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/keypairs/: sample
(+74 files in other folders)
